[gd_scene load_steps=2 format=3 uid="uid://815ibkvp2wpy"]

[ext_resource type="Script" path="res://Counter/Counter.gd" id="1_prexb"]

[node name="Counter" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -766.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_prexb")

[node name="ButtonRezero" type="Button" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "Re-Zero"

[node name="LabelCount" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 140
text = "00"
horizontal_alignment = 1

[node name="ButtonCount" type="Button" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 125
text = "COUNT"

[connection signal="pressed" from="ButtonRezero" to="." method="_on_button_rezero_pressed"]
[connection signal="pressed" from="ButtonCount" to="." method="_on_button_count_pressed"]
